Import 1-page design from Emphasis Creative
- Prototyped how to extract markdown content for easier editing
- Most content still stuck in the HTML but I will extract soon

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,287 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <title>
-    {%- if page.title is defined -%}{{ page.title }}{%- endif -%}
-    {%- if section.title is defined -%}{{ section.title }}{%- endif -%}
-  </title>
-  <link rel="stylesheet" href="/screen.css">
-  <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="{{ config.extra.blog_title }}">
-  <link href="/favicon.png" type="image/png" rel="icon">
-</head>
 
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Focus Retreat Center</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
+    
+<!-- Linking ---->
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:description" content="Focus Retreat Center is a space for personal growth, surrounded by supportive peers, free from distractions."/>
+    <meta name="twitter:title" content="Focus Retreat Center - Immersive work/focus retreats in Upstate New York"/>
+    <meta name="twitter:image" content="https://frc.emphasiscreative.net/images/frc-logo.jpg"/><meta name="twitter:site" content="@focusretreats"/>
+    
+    <!-- Facebook -->
+    <meta property="og:url" content="https://focusretreat.center/" />
+ <meta property="fb:app_id" content="183367818463165" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Focus Retreat Center - Immersive work/focus retreats in Upstate New York" />
+<meta property="og:description" content="Focus Retreat Center is a space for personal growth, surrounded by supportive peers, free from distractions." />
+<meta property="og:image" content="https://frc.emphasiscreative.net/images/FocusRetreat-cover-1200.jpg" />
+
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/custom.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+    
+<!-- Menu -->
+    <script>
+    /* Set the width of the side navigation to 250px */
+function openNav() {
+  document.getElementById("mySidenav").style.width = "300px";
+}
+
+/* Set the width of the side navigation to 0 */
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+} 
+    </script>
+
+</head>
 <body>
-  {{ section.content | safe }}
+
+      <!-- Image preload
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<div class="hidden">
+	<script type="text/javascript">
+		<!--//--><![CDATA[//><!--
+			var images = new Array()
+			function preload() {
+				for (i = 0; i < preload.arguments.length; i++) {
+					images[i] = new Image()
+					images[i].src = preload.arguments[i]
+				}
+			}
+			preload(
+				"https://frc.emphasiscreative.net/images/FocusRetreat-topimage-1600.jpg",
+                "https://frc.emphasiscreative.net/images/frc-logo@2x.png"
+			)
+		//--><!]]>
+	</script>
+</div>
+    
+    <!-- fly-in nav 
+---------------------------------  -->
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#intro" onclick="closeNav()">Introduction</a>
+  <a href="#about" onclick="closeNav()">About Us</a>
+  <a href="#place" onclick="closeNav()">The Place</a>
+  <a href="#program" onclick="closeNav()">The Program</a>
+    <a href="#pricing" onclick="closeNav()">Pricing</a>
+</div>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<div class="container-wide">
+    
+    <!-- <section class="topbar" id="topbar">
+        <span onclick="openNav()"><img src="images/hamburger.png" alt="menu"></span>
+    </section> -->
+    <div class="hamburger"><span onclick="openNav()"><img src="images/hamburger.png" alt="menu"></span></div>
+    
+      <section class="hero">
+          <h1><img src="images/frc-logo@2x.png" alt="Focus Retreat Center" /></h1>
+          <h2>A place to focus with supportive peers, without distractions.</h2>
+        </section>
+
+    <section class="callout-text blue lesswide" id="intro">
+         <div class="row">
+            <h4>Focus Retreat Center runs retreats for coding, writing, learning new skills, or working groups. Free yourself from distractions and work with like-minded people. This is the perfect place to focus.<br><span class="gold">Now planning for soft opening in Spring 2022.</span></h4>
+         </div>
+    </section>
+    
+    <section class="contents">
+         <div class="row">
+             <div class="row">
+                <div class="six columns">
+                  {% set page = get_page(path="_copy/imagine.md") %}
+                  <h2 style="color: #01286e;">{{ page.title | safe}}</h2>
+                    {{ page.content | safe }}
+                 </div>
+                 <div class="six columns">
+                      <img src="images/frc-at-night-1600.jpg" style="width:100%;" alt="Our building at night in winter"/>
+                 </div>
+             </div><!-- row -->      
+        </div><!-- row -->
+    </section>
+    
+     <section class="callout-text lightblue">
+         <div class="row">
+             <h3>Get away from your daily grind, and accelerate your project or learning to the next level.</h3>     
+        </div>
+    </section>
+    
+    <section class="contents blue" id="about">
+         <div class="row">
+                  {% set page = get_page(path="_copy/hosts.md") %}
+                  <h2>{{ page.title }}</h2>
+             <div class="row">
+                 <div class="six columns text">
+                    {{ page.content | safe }}
+                     <p><a href="https://twitter.com/focusretreats" target="_blank"><img src="images/twitter-icon.png" alt="twitter link"></a> <a href="https://twitter.com/focusretreats" target="_blank" style="color:#67bffd;text-decoration: none;margin-left:5px;">Follow us on Twitter</a></p>
+                 </div>
+                 <div class="six columns">
+                     <img src="images/pete-and-stella.jpg" style="width:100%;" alt="Pete and Stella"/>
+                 </div>
+             </div><!-- row -->      
+        </div><!-- row -->
+    </section>
+    
+    <section class="contents pic1">
+         <div class="row">
+             <h2>The retreat experience</h2>
+             <p>Focus Retreat Center offers a quiet environment to focus on deep, self-directed project work. There are common areas where idea sharing and team work will be encouraged, as well as private quarters for solitary work. There are about 15 guests per retreat, usually for 4 weeks. An online community connects you during and after the retreat... Friendships and connections made here can last a lifetime.
+            </p>
+            </div>
+    </section>
+
+    <section class="contents pic2" id="place">
+        <div class="row">
+                <div class="seven columns">
+                   <h2>About Our Center:</h2>
+                   <p style="font-weight:600; font-style: italic;">Our brick and stone buildings were built in the 1930's as a school, and have had several renovations and uses.</p>       
+                   <ul>
+                       <li>Located in the heart of the village of Malone, across from a park and a public library</li>
+                       <li>Two large common areas, a dining hall, and a commercial kitchen</li>
+                       <li>Thermostats in every room</li>
+                       <li>Central air conditioning</li>
+                       <li>Wheelchair accessible</li>
+                       <li>New laundry appliances for guest use</li>
+                    </ul>
+                </div>
+                <div class="five columns">
+                   <p style="margin-top:1em;"><img src="images/frc-building-side.jpg" style="width:100%;" alt="Focus Retreat Center Building"/></p>
+                </div>    
+       </div><!-- row -->
+   </section>
+
+   <section class="contents pine"  id="program">
+    <div class="row">
+        <div class="six columns">
+            <p><img src="images/frc-building-rear.jpg" style="width:100%;" alt="Our Building, rear view with lot"/></p>
+        </div>
+        <div class="six columns">
+            <h2>What we offer:</h2>
+            <ul style="line-height:1.1;">
+                <li>Curated space in which to focus on a specific topic or project</li>
+                <li>Accommodation for 15 in single rooms with private or shared bath</li>
+                <li>Meals and snacks prepared on-site in our commercial kitchen and enjoyed in our community dining room</li>
+                <li>Walkable small town with shops and services nearby</li>
+                <li>Each guest has a rolling desk and locking toolbox for flexible workstation setup</li>
+                <li>Accommodations for the needs of neuroatypical guests:
+                    <ul>
+                        <li>Clearly organized and labeled items in common areas</li>
+                        <li>Clear visual boundaries between private spaces, shared spaces, and employee-only spaces</li>
+                        <li>Quiet and free from TV, radio, distracting lighting, etc.</li>
+                        <li>Reduction of any strong odors from fragranced cleaning products, perfumes, etc.</li>
+                    </ul>
+                </li>
+                <li>Round trip transportation to/from the retreat center from central transit hubs for city-based groups</li>
+            </ul>
+        </div>
+    </div>
+</section>
+    
+    <section class="contents honey">
+        <div class="row">
+            <div class="six columns">
+                <h2>Amenities</h2>
+                <ul style="line-height:1.1;">
+                    <li>Adirondack State Park: Lakes, mountains, forest; Swimming, boating, &amp; hiking</li>
+                    <li>Walkable small town</li>
+                    <li>940Mbps down/40Mbps up Internet service</li>
+                    <li>Ethernet LAN and fast WiFi throughout the property</li>
+                    <li>Customizable experiences ranging from solitary retreats to fully immersive meetings</li>
+                    <li>Two simple hot meals per day prepeared for you onsite with fresh, locally-sourced ingredients</li>
+                    <li>Fresh fruit and baked goods, coffee and tea service, as well as other kitchen amenities</li>
+                    <li>Hassle-free accommodations</li>
+                    <li>On-site laundry facilities</li>
+                    <li>Board games, lawn games, and some recreational equipment to borrow</li>
+                </ul>
+            </div>
+                 <div class="six columns">
+                     <p><img src="images/coffee-and-rolls.jpg" style="width:100%;margin-top:15px;" alt="Fresh baked goods and coffee"/></p>
+                 </div>
+        </div><!-- row -->
+    </section>
+    
+    <section class="contents sage">
+        <div class="row">
+                <h4>What we don't offer:</h4>
+                <ul style="line-height:1.1;">
+                    <li>Hotel-style laundry services or dry cleaning. Guests are welcome to make use of in-house facilities.</li>
+                    <li>We do not sell alcohol, but guests are welcome to bring alcohol to consume on premises in moderation.</li>
+                    <li>Meals are chef's choice each day, based on local fresh ingredients, not cooked to order. We do accomodate any reasonable dietary needs in our meal planning.</li>
+                    <li>We do not clean private bathrooms during a guest's stay, but we thoroughly clean between guests. Shared baths will be cleaned more frequently as needed.</li>
+                    <li>"Tourist" sight-seeing excursions. Transportation may be offered in a limited way during your stay, based on our availability.</li>
+                </ul>
+        </div>
+    </section> 
+    
+    <section id="gallery">
+        <div class="row">
+            <div class="four columns"><img src="images/gallery/boating2.jpg" alt="hottub"></div>
+            <div class="four columns"><img src="images/gallery/lake-placid-fall.jpg" alt="hottub"></div>
+            <div class="four columns"><img src="images/gallery/mountaintop.jpg" alt="hottub"></div>
+        </div>
+         <div class="row">
+            <div class="four columns"><img src="images/gallery/mountain-lake.jpg" alt="hottub"></div>
+            <div class="four columns"><img src="images/gallery/pie.jpg" alt="hottub"></div>
+            <div class="four columns"><img src="images/gallery/river.jpg" alt="hottub"></div>
+        </div>
+    </section>
+    
+    <!-- landscape picture -->
+     <section class="contents pic3">
+        <div class="row"></div>
+    </section>
+    
+     <section class="contents charcoal" id="pricing">
+         <div class="row myTitle">
+             <div class="six columns">
+             <h2>Pricing and Scheduling</h2>
+             </div>
+             <div class="six columns" style="text-align: center;">
+             <a class="button button-primary myButton" href="mailto:info@focusretreatcenter.com?subject=Website Retreat Inquiry">Contact us for more info</a>
+             </div>
+         </div>
+    </section>
+    
+    <section class="contents" style="background-color: #000;padding:20px;">
+        <div class="row"></div>
+    </section>
+    
+ </div><!-- container -->
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
