some small updates from Liz

--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@ function closeNav() {
          <div class="row">
              <div class="row">
                 <div class="six columns">
-                  <h2 style="color: #01286e;">Image how much you can achieve</h2>
+                  <h2 style="color: #01286e;">Imagine how much you can achieve</h2>
                     {{ load_data(path="copy/imagine.md") | markdown | safe }}
                  </div>
                  <div class="six columns">
