--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -211,9 +211,21 @@ _________________________ */
 
 
 /* mobile flow */
+
+/* For devices smaller than 1075px */
+@media (max-width: 1075px) {
+  #pricing h2 {font-size: 3rem;}
+  #pricing .button {margin-top: 1.2rem;}
+}
+
 /* For devices smaller than 820px */
 @media (max-width: 820px) {
   .contents {padding:4rem 30px;}
+}
+
+/* For devices smaller than 789px */
+@media (max-width: 789px) {
+  #pricing h2 {text-align:center;}
 }
 
 @media (max-width: 680px) {
