Copy updates and domain redirects

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
     
@@ -43,7 +43,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
@@ -52,17 +52,15 @@
 <meta name="theme-color" content="#ffffff">
     
 <!-- Menu -->
-    <script>
-    /* Set the width of the side navigation to 250px */
+<script>
 function openNav() {
   document.getElementById("mySidenav").style.width = "300px";
 }
 
-/* Set the width of the side navigation to 0 */
 function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
-} 
-    </script>
+}
+</script>
 
 </head>
 <body>
@@ -86,27 +84,27 @@ function closeNav() {
 		//--><!]]>
 	</script>
 </div>
-    
+
     <!-- fly-in nav 
 ---------------------------------  -->
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#intro" onclick="closeNav()">Introduction</a>
   <a href="#about" onclick="closeNav()">About Us</a>
-  <a href="#place" onclick="closeNav()">The Place</a>
+  <a href="#place" onclick="closeNav()">Our Center</a>
   <a href="#program" onclick="closeNav()">The Program</a>
-  <a href="#pricing" onclick="closeNav()">Pricing</a>
+  <!-- <a href="#pricing" onclick="closeNav()">Pricing</a> -->
 </div>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div class="container-wide">
-    
+
     <!-- <section class="topbar" id="topbar">
         <span onclick="openNav()"><img src="images/hamburger.png" alt="menu"></span>
     </section> -->
     <div class="hamburger"><span onclick="openNav()"><img src="images/hamburger.png" alt="menu"></span></div>
-    
+
       <section class="hero">
         <h1><img src="images/frc-logo@2x.png" alt="{{ config.extra.company_name }}" /></h1>
         <h2>{{ config.extra.tag_line }}</h2>
@@ -215,7 +213,7 @@ function closeNav() {
      <section class="contents pic3">
         <div class="row"></div>
     </section>
-    
+<!--
      <section class="contents charcoal" id="pricing">
          <div class="row myTitle">
              <div class="six columns">
@@ -226,7 +224,7 @@ function closeNav() {
              </div>
          </div>
     </section>
-    
+--> 
     <section class="contents" style="background-color: #000;padding:20px;">
         <div class="row"></div>
     </section>
