add mailchimp signup form

--- a/templates/index.html
+++ b/templates/index.html
@@ -208,8 +208,12 @@ function closeNav() {
 
         </div>
     </section>
-    
+    <section> 
     <!-- landscape picture -->
+    <div class="row">
+    {% include "mailchimp-signup.html" %}
+    </div>
+    </section>
      <section class="contents pic3">
         <div class="row"></div>
     </section>
