--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,19 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/custom.css">
 
+  <!-- Mailchimp
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px;}
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        #mc_embed_signup {
+          margin: auto;
+        }
+</style>
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
